# ChangeLog for app-text/libmspub
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/libmspub/ChangeLog,v 1.12 2013/07/09 06:15:44 scarabeus Exp $

  09 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> libmspub-9999.ebuild:
  Fix wrong inherit order wrt bug#476204.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libmspub-0.0.6.ebuild:
  Stable for ppc, wrt bug #474066

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libmspub-0.0.6.ebuild:
  Stable for x86, wrt bug #474066

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libmspub-0.0.6.ebuild:
  Stable for amd64, wrt bug #474066

*libmspub-0.0.6 (14 May 2013)

  14 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libmspub-0.0.6.ebuild,
  -libmspub-0.0.5.ebuild:
  Version bump to latest.

*libmspub-0.0.5 (06 Mar 2013)

  06 Mar 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libmspub-0.0.5.ebuild,
  -libmspub-0.0.4.ebuild, libmspub-9999.ebuild:
  Bump to 0.0.5 and drop older.

  13 Feb 2013; Tomáš Chvátal <scarabeus@gentoo.org> libmspub-0.0.4.ebuild,
  libmspub-9999.ebuild:
  Fix doxygen docs placement wrt bug#456838.

*libmspub-0.0.4 (05 Feb 2013)

  05 Feb 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libmspub-0.0.4.ebuild,
  -libmspub-0.0.3.ebuild, libmspub-9999.ebuild:
  Version bump to latest, update deps.

  12 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> libmspub-0.0.3.ebuild,
  libmspub-9999.ebuild:
  Keyword ~arm, wrt bug #451464

  16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> libmspub-0.0.3.ebuild:
  workaround for bug 399061

*libmspub-0.0.3 (20 Sep 2012)

  20 Sep 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libmspub-0.0.3.ebuild:
  Add release.

*libmspub-9999 (07 Jun 2012)

  07 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libmspub-9999.ebuild,
  +metadata.xml:
  Initial commit, live ebuild for now. Required by trunk libreoffice. Fixes
  bug#419967.