@@ -2,24 +2,26 @@
 Hash: SHA256
 
 DIST libmspub-0.0.6.tar.xz 353356 SHA256 4cd4e3e9e3eef5ae676fa18415f3f342c17c28e5167d7354115a5cc2ea96a2f9 SHA512 270046ddda02ddbde03d2deb0c0e643be85d6bfdb2ca532f425bb2c8ae84925ec621c41205123630b9afebf603615610edd472996a3e7272fb90ca5357257b16 WHIRLPOOL 95326bd3ac495bb119eb35b479b72cc5c594f3fe8dd779c033a08f2df8b39b04f99203d0d5524dcfe56ed36fa4e227d561e49fd8ab5aa1cb7d461491483394fa
+DIST libmspub-0.1.1.tar.xz 340096 SHA256 d0ac8ec68a7546a3fd084c82024d1939937886c99b843c9fd8b62f8257c8fb5b SHA512 5f9059f6b9c0517f3e85078d5f90c8c914b17219e5d6f266baa60df0e7d03c0d015c5bfc334f51ee1885b8e17b14588519b18d5952a6338ce1b364f3afb04489 WHIRLPOOL 9719ec2022331cca6236451151b09f8850a91128e561f4077fb9b80b279a79fbf4c9a2875e488b9af548544ea796aa473885a54fec5949e97ba52dd7765a6102
 EBUILD libmspub-0.0.6.ebuild 1252 SHA256 8624b2647e1c894a234fe6eb4bb781ba97f5d74077ddb21c4bf534fb2a14b8d6 SHA512 ddb6a2d02088b3085266550b5ba7d37ef52dcb1e02fc2547a4da8838dbf05e6a59b6c435dbceea55db443fe4091581c80bffa673f3ecf48ce02dda6402e5b69e WHIRLPOOL 3ad10b190884688cfeca316220db2b29e7dcbb3b92e45f422b8e3dbcf10b4d7d728ea5506bca16f825a4b534551abfe845ea0b45888532ef2bb5355a2ea3f230
-EBUILD libmspub-9999.ebuild 1260 SHA256 9ee7b6974e93372ab9c35edc3c585fc02f40592d80bc9af63809db17a16c8d01 SHA512 474c63d30a1ee751d5da6a7e2259a55d50e0603ac047553f86b77487dc6b85b5ab9168801519da4e4227a60a23d04c2b0433e3b54d1da769e7f618ec8f2f433a WHIRLPOOL 451c59c3e09be595fb0d34a6fb5aff2e2ca8758d3a15d9c554413c65e6e7301f841312e4b36743d8a1272c878d2f287439b8613be8876bb41ea1899f25287934
-MISC ChangeLog 1926 SHA256 79dd34e0d33b7b7edc495581da0ffe0fe9df16da00a6dec979b5aabaca4f979f SHA512 f786b0bb417b5f40489a48d6ffb81cf049a19d8da64d8c5dfa1bd4c56a469754142e8027e1557a0b3f3a37313cb9335f33858b85b13236dbe291592e80198361 WHIRLPOOL 59a90c6100a50f0718063617c781f4a886b7746960d30c5d047ab254cf3c7223d8f60ca22622c722c45c3d0312b986433ca8704d32ec04f54be4969ee2f84e46
+EBUILD libmspub-0.1.1.ebuild 1241 SHA256 4863c1b76d1ec45e554b8169c5cc8848831f6c76d2f91e891fa2186e1e709365 SHA512 4cc6eff93ae0a078aff1895fd329343cba725c8d3583329ad21601f7bac58ffb16a1cef6fc0a1a2537c3ae19543eab03320597324347fb6df509bfb6bf324110 WHIRLPOOL 9ac937dba51c1015fefa563d1a37b474e3575824ca85208b31f7a76e8990f1ba91493d9b58a4cb99c725dbe058e0930e72262d6b9a801c24694d13b87da2bcc8
+EBUILD libmspub-9999.ebuild 1240 SHA256 da2a57c5f53acb89374fad8a22ed128f34235addb5b902d9128c2fb53631019d SHA512 2e51b8c726eb897c4f535a266ef29148982f236f4b651b49c1e59c4ab741bff77538cfd55e807c1cf17e41bcf2560bfe25bcd1534fe6dac746971ec721a65d95 WHIRLPOOL 5d02316e6c3aa6fc46246111aa342be5a8bd07c93f4c091f22f7d36fa3f10775f9ac977618fa569fbafce27c70d6215e65b7b4a84bdb98030dc1707ff0057840
+MISC ChangeLog 2111 SHA256 1aae69e38502d4433a2f1ff13211652a18b4c2dbbd078e47e277d02df0f9a376 SHA512 095f15c027132c0d32af8dec89c61a762df475f47028f9b664a40d87b9f0f370c11d1dc604162309f6546c613d8e78366ee272a4085b92630885b1fbb4ad3f82 WHIRLPOOL 2aaf25b5f825ecbba399b9e56d89be665e04ad8cabaab92f19800176383857042b408d3be3bf406df37eb4daad6a7ff62bc91f9b85c9722d860808166bd48e60
 MISC metadata.xml 164 SHA256 6dd077e0a4bddf8cac0a6d7fb01d5f992a81c85d77d55787d19c6d4ae4c5aeeb SHA512 acd8ec5158c34fd738af175dda4c270a884c80e76dd10d9252e2513846ae1cb69ed8b1afe328a69ced10974ca3c60366394990b98a0d9b9815527f262afd9937 WHIRLPOOL 43b43d99d3c96c6da7006df219d57a4ff853353940dbd597bbbd2be00af7b38f0e6c3e33024b1e964ef1fedb12f788ea78693b7e3527011d8bbb9757ec0b88a2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJR26rsAAoJEOSiRoyO7jvokUsQAIJ1WcIUkoa3//u4HRxGss4V
-uZ5+Gn5aW+dYVLEymoY/vtmlR1lpOa63aAGK3qbjqSs1rV01inDUNS/Sc45iRK6L
-onoA/lkBBxrwrLhQ7xuC0yeQfZ/veIVHJhlVCVBAtM7v5MJP/tzPcjRj9ClsJ5dy
-cK/4ssOjsIei8uLYFsPYxaTQS4GxTASy7Ge9E07jORZbhy8r4FYBECZ5SihLmihK
-CaOLJRJSsX+F4ZupmK6T2uYnh3gNHq5GnYDuTc38J5SJKegMnU+s/haA6lZSDy4c
-8nSX3nWn33XRoR/JBYCopXiGzaWLQUocid1aSTnbv2M94v0dkQJcsnC/C9rVIeyv
-0HOpzIiLPAGqU7ldYIQft/74yQT5kDGKNmVEwzBUH62kFzvatTlihvdxgC2aIt6+
-kkV0km3+8+J6ZlxmvI6+HupiaW+VWWAlQIqqBwz/2EFvx9EyR2ZP+37vw3j9Afh5
-Gl4gY7wHb2QJK+ffFFW7tT53WslvVN5jPtCydYDs277hPKAoReN7SuVgIR5M2HYz
-wwAMG0bdVRM67efxDIOPrJ0LlDgqtwpkRXvx+OIbhEXI6wIiHTRpRTbsaK75+kNV
-nXrlKocW/fAoEuWuL+l0oVwwn8WVta8s9G9eff5YeJNuPzIUAC5RSHuUc4h/k/uk
-n7IP6gIAjZdhodDZ6dMO
-=7MtR
+iQIcBAEBCAAGBQJUFBBGAAoJEJS/30SErRQv4i4P/39nS4y8VaktCyAexCTcObkT
+KABa6CVcVM6uI9J6dQIxxs0K57T9ZQ4J4i0mgOz2JuCfMFZWt8FnPi8UBN7sQd/1
+nb28cv4Hqum5eFrhk2Gv0lUycfomUowtXcF3P9E3AVTH4kcqcDZgTQYafTsyu4G4
+UbQmIwf0CF5D8qPExFo01yx8ffM1RD871a5aKj/GuHG1e4Ch6+RpSS5dYUTDDpE+
+TUz1n5eFsikrMWnU6fsO9zDoyLegohDpSRBPt9iLaefqnSxwICJasYukWtGi4MXS
+MNJn1kO7LiXFAD/Cej4zSz/49sAqhOEeJYmBQKV3iP5hKkwlDiQuervSisnhrw5J
+Q1J6RZn+DEUrDpWZMNWduDOd1/z6FJkYn85LojUKADY26p8v3e95Dc7jZMawj5Mu
+VfaySqtOSEfuse2+WWIyfFxM+/NmttioZmgnw4tVV8LbdtWgC2MMlwD06ssceAY2
+Zc5cJEt6PmZTpz5UXIL/1wceIVTMXxYs+TPtE08U8T/HdYbCcUWCscc0ASGS6Xao
+EMVh6c6ytduCRcYeNkAtEGRuyg1fiWCf+DvI4mRCCRlTogmmJFOtYD6fBQ90jgip
+HQhwpCv1McmEDC1BoILQiho5W0uMMONk0jKP91aVwrrtIdQyfOw7boZeJcqIHeGi
+uSan+poOrlP/4XnLH4Wp
+=psbK
 -----END PGP SIGNATURE-----
