@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libmspub/libmspub-9999.ebuild,v 1.7 2014/09/13 09:37:02 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libmspub/libmspub-0.1.1.ebuild,v 1.1 2014/09/13 09:37:02 dilfridge Exp $
 
 EAPI=5
 
