@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX libav-0.8.5-support-libcdio-paranoia.patch 1477 SHA256 2e3490bba021c512828f12dfc5e6be39a5f3c53e16b2ceb99e6f6c4e71139803 SHA512 2a9847a435a32fac0b9bd904b932d20f26a6c7b0d086cda42c45f9099d87dbd4e637c7a52e5c29ad0df69a95ffed91bad2673d773c3045f03baf736796ab8332 WHIRLPOOL 77152717b72d245e4bfd5ac0cc1ed4ac3a512086be248515bc7d0c73d4840cfae7ba3bb7a668ee354803b6fba6ad90b992f80f2c335b5173741498a968b3eca2
 DIST fate-10.tar.xz 558524508 SHA256 65779319ff75a5d93f20132a7c348db2ff6f0f0275fb64a23f81fbda6e44c1cb SHA512 5e569b899961d82c579d974eb13b8a5263ae7a83dc788119d6abf923c9c133029fd861960a85c316e0b0a0bd61722cc3bcb393a65d9d2c551084c0b1103cc582 WHIRLPOOL d9e0bb01ae809ca57a566ae804b9e30ff0239e43047a7f93d07ab0d31e95c7f06cadd651dd3badc2b906f34ffa12669cff87910ffe115f34c3279615f8afaddb
 DIST fate-9.tar.xz 467671500 SHA256 27d10fd49267452ac787c3f43501a4a21d0ccaccc5ddd6d79d8a6150ee276532 SHA512 8e45539f2512ef915b37c857226c0243940259f269b8f99393b9defa3352d7b8c1fcc5078f4f0d40dc0509737f0c915e179cedcc77f71fe5d96b1b956169a202 WHIRLPOOL d280ac32c6d84f121be8d733774e72a4df3f2e84d71051aea509ef5ca3289c94fd548bf03ff12215e045bf20c83426c547e6b5eb446429d167f38af7c7aa9803
@@ -10,12 +13,31 @@ DIST libav-9.16.tar.xz 4079520 SHA256 ca846473b0b8ed8e3404c52e5e92df6d35cb5fa487
 EBUILD libav-10.1-r1.ebuild 10141 SHA256 5dd529a0c63879a970d0954251036c3cfc73ee9e9b4d499a2f5f6138edf705e9 SHA512 c87c7ca2aea92b92cc4b7bb1f17c36d7fa260f9a78cb5f5826245899b24b8dc2f05be529a12daa2ff568f1f827e22da66d5962f83595d967769c039c4384e6e7 WHIRLPOOL b488a93d303a38d3dae600d6af7127083cf249b5c956c8cce1130faa5268e2d468f8e79793e2ac44dc14fa1cc416008e7844b7155571fa127b35a4b4941dc576
 EBUILD libav-10.1.ebuild 8471 SHA256 d988a36ea82dd48a319cb52879bdc50e01b8b7c91c8b046d549f82f5eb28d8c2 SHA512 263807c5c79957241e31c715124c451b2f35c11eccc1e363c86e8aec540b762e2aa95b63e08c197d298f1155888adf9c9c7f93ddf44f6a8265654da9632e92d5 WHIRLPOOL b21948b10983493b50871afc4c8350f620e48962773125f45a7f59918dd11ae106193b4c3940d017b1b328cbc9c0d358764a2b64dd05d09a062e5158793f09fd
 EBUILD libav-10.2.ebuild 10138 SHA256 e14e3f3c36d16f2dcc9e04a27ef975291718957dac6e09e1a446a256db51fe0f SHA512 b0cb3be186b99ce14a9b16dcae30c9464e8b0bcf83594f448cbbcd0a3ca95c76ee834a9c5a41fe31788c391ece7d4f163aab37bcf144d9fea01a82e9bb36a484 WHIRLPOOL 34f2481012f2c75961c99ecdc7327b9fbe9db25353856772d354965866f16fe57cad68b3c764af07f6cf28fc298aa0225a4bfbe8156066cc1c8c79642c376a03
-EBUILD libav-10.3.ebuild 10121 SHA256 2132b99caaa33017aa933cff7d4d9938f14c0bac2875eab593f14e829a0c9826 SHA512 6ac07d2862f7ba6181fdfbc390c4426df03c345ed137c90c023ea268f099d76b158c2f5a04bffbea76bbdd9199581c424314e52342b9f72a84d72509f05f5380 WHIRLPOOL beb1fb10b357104417f20e2ca2a3568d32d13644753cd448106a9f1f4015b2b49bd6b0bbe2a025aea4382e151e191c02d0a7783c09fa1d828d91771c8391a58b
-EBUILD libav-10.9999.ebuild 10224 SHA256 e42d0e8ebe46c7d34d2e35d9430e72c6035d5885724805c294b1c21c6cc2cb98 SHA512 4c7b3e3991de6a584b6777e19b4cade07e44ef91fcb1b03745e53f04e490de77a649a3bc6985f4fab4a1d06c9dec4dd7191295f58333d5caa263ffa7847a2664 WHIRLPOOL b7739c631997717b29014a5ed1145db0e8607ea1e6863edbe86e26c12676ef7334cb61c676908604bad9b4ba2e719cfcaff8e0d92e1945638f7035da744574fc
+EBUILD libav-10.3.ebuild 10135 SHA256 40e4946d92e66c145f466d69ffe3433678eecc1328957c8017457822a5db92d6 SHA512 0a9149d80a3971ca9d35be332b85a71703ef3befd80fc7d463746b114a2b77a3cfb33ca492ee30383285b33c597446cdf9f7a1162b66268282bef8f56413216c WHIRLPOOL 062d83d811fb7ac3e40fabe0535932a99ce9410bf3d127dfd4afaf7b73b3c2ed2b445e04c70eb219b679b9b044bea5902a0c55d6cd4bbe74ac3950acafbd2c96
+EBUILD libav-10.9999.ebuild 10238 SHA256 b6d7496a7c706f0e5b8771f7451b6e5e7801e0a30e62e5a29f24f092ef453b31 SHA512 96c69fbc93e81e4a8155fe59e512239617c068f4cde2a2b3c8bd2f27ffa5ca65363d28d32f3dffbfe2d9de2f34d684fa968aa56b6f5d4ff5ca28b1437f993957 WHIRLPOOL f507677255e0f239cd5626a8855c183304e4bdea6208cfedbf457a1bdef9fabf5af6192500c0daefdeabd8dbc80bd01f1038b5e81dc6d822e70f2ba8b433780c
 EBUILD libav-10.ebuild 8372 SHA256 03a45a976332200c542471da8ea936b13b74fd5b754c676fa9591f1b91fb83bf SHA512 3d2a25ff06b2ac139c208983647e42c15b439f103e4b324ebb6013111ba7e1b944b69e95b2e2028803ce0c7e2db30041cc3199675133107403322e55eb301598 WHIRLPOOL 5e16b09b6a73ac6f873d5a31b06c5163a19e34eb363da86cd26fbefa12a63e87eadfc1f7d861a51866723d8910e4aa21a328829ba476dab464c5d4ccb3115fe7
 EBUILD libav-9.14.ebuild 10157 SHA256 cb77e984a6ebba124a24673ef9948779023e0a1aa0ae618d0184e1ba1c08a6d9 SHA512 8c2bd51379ed4753d82a8cb738c1bbd2eb194218480839f96552666c7ed8a0bd2455f0a751a55fac242ec867c8d80ecba6bc07c935756b372f992f559e2cf07e WHIRLPOOL a92d9c03c8b083c54c2eecf4d9e90aedebb11ff8c82296339d9386384bb8ac66ff671faa2092c007e667aca7c915bf75e5345c5125cca2d6d9aac17b670f5ba6
 EBUILD libav-9.16.ebuild 10166 SHA256 ed6b2744db84c65696888907b064b90c5f5a7aa3566886fd1679f573a73d1cc5 SHA512 26a26f8a47f13837df48ad9da10a7146a53ba10c0a7cc3f391aeab968d554a1de1628581f52cc9afc9797a82b049261dabe97cb16db078bbf05a945edd05f03e WHIRLPOOL 241535e813d3d1c33194fe186a1ca29ff9243a800ce88926fa59fecf706154a827ec7aef77cb80c317663e092197e81030d8977494d8d55a909a5cc7b08a81fc
 EBUILD libav-9.9999.ebuild 10168 SHA256 8e825f17f40724cb919f81e5f07c62bd5ec33069f10e1731d93671e7a2e14a53 SHA512 8276ebb9269043a0dd574916d5de75b405dd46c1e386391b2cae1b842c0b18ef00df7e508250e96a1ec24b3f819b21ec431ab04f67b6327ef350952422dca603 WHIRLPOOL e1f0a9148578e2b87d48711835e0183645dc0338fecbf131eebf597e930ee086f6865c4c6920ffaf66b88c171a487505395a47d6db307c0050eaa17880e5865e
-EBUILD libav-9999.ebuild 10211 SHA256 c9177bea15c20152b5d296cfbe01cb9cf098215628f7bbc232a07c718ffe5ed0 SHA512 cc42382fcbfbfd0ea56192aa7f76d3acd391637830c7b029252c5f29ba4ebc4ad5ace6a21ee4b9aa421d3b08b2734e3f0fcc4dea956553b027ea719e8d8826f3 WHIRLPOOL 94ff862d44a9a3ca38afc20410a873c91343561e6e0530b858cc93651d20179c8c5dad190f1d620295d8aac82f54a94ccf4f340f6117ce5dcdfb8112d3b3fbeb
-MISC ChangeLog 33629 SHA256 4bd8ebd2ba040ff48942aba4f42503865c364d1e3a2ff8c71a3551fffd7d6e91 SHA512 50afd9e6a700b975b91a343b5905f4f5baf176c644255fafab71452a919ba19f6f06bd0a828045b084af711e61d85e07e25235e256e84748b8d4054265390afe WHIRLPOOL 215c5a483af17bd4f1c7dd67ccbce586d701ecf72c7c349b2effec19dbb74dfe5793f22d0338060178ef2b85423cd7864ee3fd33b77fc1bef9e9d4c6280ab8fa
+EBUILD libav-9999.ebuild 10224 SHA256 783a837454ef176c23fb6f85ade8ac1a39b2ba8018a3865c2069c622128df64b SHA512 7b5d575f85cd606bc1cb73a25ed36057de1d4943374db871495a78fe664b592db8a1c4196c35515dab4dc8dbb57e8145b8ad91f5297f70877e34ea3629835fa6 WHIRLPOOL cd918b977f7f784b8b55bd752428375e7fa7122b57de77b282ec81bec9762c7078d3cac0d0e7508b273e7550ef715f973eb37de94dded80e3df067bc72201d6c
+MISC ChangeLog 33782 SHA256 4dfe92e561accf122be3f077e1ad6b6f5d9cff1677cfcb0cfd7c4800e4189618 SHA512 58dc8e9788a09bc6e7de8a1606f907b01e291aa6c675801ddf06aaec591603a46c58689148cb69624e381748d367d363f1af90723077a19a4d1cc9a3c6189515 WHIRLPOOL 6a02872b264584992228c567f2ce411aed9379668a3dda5efe0ae72266710a1bef49ae054862266e44375b959685598fb62130364d5a5e62cb8aaeee5c81eba0
 MISC metadata.xml 3062 SHA256 63aeaae7b95e8df34cfc3de199206124db7fee93217af471549763188d9d1da6 SHA512 4725fb1fdd818fb8e669f1643077c1fd4e898783081bb44eea44680ce51a581ad20c9bac23664b4bdf6e7a79a9ef4bd82411d00f30ef0f0b9772aefda2414e5d WHIRLPOOL 89633c75e96fb3bc727c3418172efe932bbf296b46aa69ade59e4fc0d967b65a215dfd79a336b759a4085bfb1b310fa34f65d063014950e1c836bec17aaea127
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJUFA+iXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOGhwP+gI964GQhXbaq/tKY+EXN/CI
+gU1YKPiaaSjWjc6iidTIpZqnn8/AtgDWeNEs2No2UFixesAKb4c+KTjpqU7TwIr6
+TMOU7JibN5T1UAbR/m+VQgVdwOnmYSIlRuoCew/fMPPGnbMu9GDjM3opgKDvE/Z8
+O339/XqNaPoqj5HT0sYRdOXWf4SlBlNxxOFJX/Yywk2jCDMXwfo98K49KUCmNnd+
++CvLOiKdTtFMALa4vxEs3LE4CoNEMdsF/AjLpNxR/8YrtByZvV4QFPeFOCw2rW+m
+2NkTpOgOB+50NHLadwieY7uxZLxrVyF/DmzHeAXLhUfmE12PxGRX4fB65ae2Cqzl
+FCoQv0Dty0r7TiToXpwu+S3Lwi3+A0EIaD8sr20Pv0IQ6dBXrze+pZ/YTUClzHmA
+LCgIyU6ILkRd3AlGls27dtmToab98l+gdwAiDAVNomEKOfTyrCMAW5yiok45Ud7G
+FIq0gofui0GHw3+XtzN6E2oYzPyASecwUR3LX0ohvLalHjY/wfXYPdkWOb3SPnYq
+p21JGj7TY0KBEm0mby9xNVSzH0TktBKviiGS+X5fOrbNixBIok9NnDoBtl6yfmDy
+dIj6UBHolDupo7QCeAF1UwYBI6naBue/OcELUsBnFKLFwhBuZjEO9e4mErzl9dXQ
+v9lX8NculZuJWFYb9RYj
+=6n5a
+-----END PGP SIGNATURE-----
