@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare unpack
+DEPEND=dev-libs/icu:= dev-libs/librevenge sys-libs/zlib virtual/pkgconfig dev-libs/boost sys-devel/libtool doc? ( app-doc/doxygen )
+DESCRIPTION=Library parsing Microsoft Publisher documents
+EAPI=5
+HOMEPAGE=https://wiki.documentfoundation.org/DLP/Libraries/libmspub
+IUSE=doc static-libs
+KEYWORDS=~amd64 ~x86
+LICENSE=LGPL-2.1
+RDEPEND=dev-libs/icu:= dev-libs/librevenge sys-libs/zlib
+SLOT=0
+SRC_URI=http://dev-www.libreoffice.org/src/libmspub/libmspub-0.1.1.tar.xz
+_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=8f4d7d58a247cd6e0d93c56a6dd38280
