@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile configure install prepare unpack
-DEPEND=app-text/libwpd:0.9 app-text/libwpg:0.2 dev-libs/icu:= sys-libs/zlib virtual/pkgconfig dev-libs/boost sys-devel/libtool doc? ( app-doc/doxygen ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool dev-vcs/git
-DESCRIPTION=Library parsing the Microsoft Publisher documents
+DEPEND=dev-libs/icu:= dev-libs/librevenge sys-libs/zlib virtual/pkgconfig dev-libs/boost sys-devel/libtool doc? ( app-doc/doxygen ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool dev-vcs/git
+DESCRIPTION=Library parsing Microsoft Publisher documents
 EAPI=5
-HOMEPAGE=http://www.freedesktop.org/wiki/Software/libmspub
+HOMEPAGE=https://wiki.documentfoundation.org/DLP/Libraries/libmspub
 IUSE=doc static-libs
 LICENSE=LGPL-2.1
-RDEPEND=app-text/libwpd:0.9 app-text/libwpg:0.2 dev-libs/icu:= sys-libs/zlib
+RDEPEND=dev-libs/icu:= dev-libs/librevenge sys-libs/zlib
 SLOT=0
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	06133990e861be0fe60c2b428fd025d9	git-2	2027b81a576527fa16bece425941e094	git-r3	6ebae45064cb04482f3c702632dd9528	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=e280a79dd151041b2b2e7b4e07b09a2b
+_md5_=4ac4596baad5489d1c943523541beb73
