@@ -1,6 +1,12 @@
 # ChangeLog for app-text/libmspub
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libmspub/ChangeLog,v 1.12 2013/07/09 06:15:44 scarabeus Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/libmspub/ChangeLog,v 1.13 2014/09/13 09:37:02 dilfridge Exp $
+
+*libmspub-0.1.1 (13 Sep 2014)
+
+  13 Sep 2014; Andreas K. Huettel <dilfridge@gentoo.org>
+  +libmspub-0.1.1.ebuild, libmspub-9999.ebuild:
+  Version bump. Thanks to Andreas Sturmlechner.
 
   09 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> libmspub-9999.ebuild:
   Fix wrong inherit order wrt bug#476204.
